--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,26 +1,62 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-color: #000;
+  min-height: 100vh;
+  color: white;
+  font-family: Arial, sans-serif;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #202020;
+  padding: 1% 3%;
 }
 
-.App-link {
-  color: #61dafb;
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 1%;
 }
+
+.App-logo {
+  height: 8vh;
+  width: auto;
+}
+
+.app-name {
+  font-size: 1.5vw;
+  color: white;
+  font-weight: 600;
+  margin: 0;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+}
+
+.search-bar {
+  padding: 0.8% 2%;
+  border-radius: 2vw;
+  border: none;
+  width: 20vw;
+  background-color: #121212;
+  color: white;
+  outline: none;
+  font-size: 1vw;
+}
+
+.search-bar::placeholder {
+  color: #aaa;
+}
+
+h2 {
+  text-align: left;
+  padding-left: 5%;
+  margin-top: 2vh;
+}
+
 
 @keyframes App-logo-spin {
   from {
