--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -73,7 +73,23 @@ h2 {
 }
 
 .upload-btn {
+  display: inline-block;
+  margin-top: 2vh;
+  padding: 0.7em 1.5em;
+  color: #3ea6ff;
+  font-weight: bold;
+  border-radius: 0.6em;
+  text-decoration: none;
+}
 
+.profile-link {
+  display: inline-block;
+  margin-top: 2vh;
+  padding: 0.7em 1.5em;
+  color: #3ea6ff;
+  font-weight: bold;
+  border-radius: 0.6em;
+  text-decoration: none;
 }
 
 @keyframes App-logo-spin {
